add webpack plugin example

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:custom": "webpack-dev-server --content-base test/  --config test/webpack.config.custom.js --open",
+    "test:plugin": "webpack-dev-server --content-base test/  --config test/webpack.config.plugin.js --open",
     "test": "webpack-dev-server --content-base test/  --config test/webpack.config.js --open",
     "test:build": "webpack --config test/webpack.config.js"
   },
