--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^0.20.0",
+    "hash-sum": "^1.0.2",
     "highlight.js": "^9.12.0",
     "loader-utils": "^1.1.0",
     "markdown-it": "^8.4.0",
