--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "description": "Webpack loader for converting Markdown files to alive Vue components.",
   "scripts": {
     "precommit": "bash node_modules/vusion-hooks/pre-commit",
-    "test:custom": "webpack-dev-server --content-base test/  --config test/webpack.config.custom.js --open",
-    "test:plugin": "webpack-dev-server --content-base test/  --config test/webpack.config.plugin.js --open",
-    "test:advanced": "webpack-dev-server --content-base test/  --config test/webpack.config.advanced.js --open",
-    "test": "webpack-dev-server --content-base test/  --config test/webpack.config.js --open",
-    "test:build": "webpack --config test/webpack.config.js"
+    "test": "webpack --config test/webpack.config.js",
+    "test:dev": "webpack-dev-server --content-base test/ --config test/webpack.config.js --open",
+    "test:options": "webpack --config test/webpack.config.options.js",
+    "test:plugins": "webpack --config test/webpack.config.plugins.js"
   },
   "main": "index.js",
   "repository": "vusion/md-vue-loader",
@@ -40,11 +39,12 @@
     "eslint": "^4.19.1",
     "eslint-config-vusion": "^2.0.3",
     "markdown-it-for-inline": "^0.1.1",
+    "markdown-it-task-lists": "^2.1.1",
     "raw-loader": "^0.5.1",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.11.3"
   }
 }
