--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "Webpack loader for converting Markdown files to alive Vue components.",
   "scripts": {
     "precommit": "bash node_modules/vusion-hooks/pre-commit",
-    "test": "webpack --config test/webpack.config.js",
+    "test": "webpack-cli --config test/webpack.config.js",
     "test:dev": "webpack-dev-server --content-base test/ --config test/webpack.config.js --open",
-    "test:options": "webpack --config test/webpack.config.options.js",
-    "test:plugins": "webpack --config test/webpack.config.plugins.js"
+    "test:options": "webpack-cli --config test/webpack.config.options.js",
+    "test:plugins": "webpack-cli --config test/webpack.config.plugins.js"
   },
   "main": "index.js",
   "repository": "vusion/md-vue-loader",
@@ -35,16 +35,18 @@
     "markdown-it": "^8.4.0"
   },
   "devDependencies": {
-    "css-loader": "^0.28.7",
-    "eslint": "^4.19.1",
-    "eslint-config-vusion": "^2.0.3",
+    "css-loader": "^0.28.11",
+    "eslint": "^5.12.0",
+    "eslint-config-vusion": "^3.0.1",
     "markdown-it-for-inline": "^0.1.1",
     "markdown-it-task-lists": "^2.1.1",
     "raw-loader": "^0.5.1",
-    "vue": "^2.5.2",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.11.3"
+    "vue": "^2.5.22",
+    "vue-loader": "^15.5.1",
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
