--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "markdown-it": "^8.4.0"
   },
   "devDependencies": {
+    "cache-loader": "^4.0.1",
     "css-loader": "^0.28.11",
     "eslint": "^5.12.0",
     "eslint-config-vusion": "^3.0.1",
