--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "hash-sum": "^1.0.2",
     "highlight.js": "^9.12.0",
     "loader-utils": "^1.1.0",
-    "markdown-it": "^8.4.0"
+    "markdown-it": "^8.4.0",
+    "virtual-module-webpack-plugin": "^0.4.1"
   },
   "devDependencies": {
     "cache-loader": "^4.0.1",
